# LACHESIS

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.julia-test  LICENSE  README.md  citations.md  pyproject.toml  test_ariadne_input.py  test_bma.py  test_geneva.py  test_starevol.py
docs/: eep_methodology.md  metallicity_catalogs.md
examples/: run_ariadne_pipeline.py  run_bhac15.py  run_geneva.py  run_starevol.py
julia/: Project.toml
julia/src/: Lachesis.jl  config.jl  interp.jl
julia/src/grid/: base.jl  derived.jl  mist.jl
julia/test/: runtests.jl
lachesis/: __init__.py  bc.py  binary.py  bma.py  config.py  display.py  error.py  filters.py  fitter.py  interp.py  interp_numba.py  librarian.py  likelihood.py  loglike_njit.py  output.py  plotter.py  prior.py  sampler.py  star.py
lachesis/grid/: __init__.py  base.py  basti.py  bhac15.py  dartmouth.py  derived.py  geneva.py  mist.py  parsec.py  starevol.py  yapsi.py
lachesis/librarian/: __init__.py  _api.py  _hypatia.py
lachesis/plotter/: __init__.py  _api.py  _constants.py  _helpers.py
python/: pyproject.toml
python/src/lachesis/: __init__.py  bc.py  bma.py  config.py  fitter.py  interp.py  interp_numba.py  likelihood.py  plotter.py  prior.py  sampler.py  star.py
python/src/lachesis/grid/: base.py  bhac15_download.py  dartmouth.py  geneva_download.py  mist.py  parsec.py  yapsi.py  yapsi_download.py
python/tests/: test_bc.py  test_binary.py  test_bma.py  test_grid_base.py  test_grid_bhac15.py  test_grid_dartmouth.py  test_grid_geneva.py  test_grid_mist.py  test_grid_parsec.py  test_interp.py  test_librarian.py  test_likelihood.py  test_numba_interp.py  test_output.py  test_photometry_fit.py  test_plotter.py  test_prior.py  test_sampler.py
scripts/: basti_download.py  dartmouth_download.py  starevol_download.py
tests/: conftest.py  test_bc.py  test_binary.py  test_bma.py  test_derived.py  test_evolutionary_state.py  test_grid_base.py  test_grid_basti.py  test_grid_dartmouth.py  test_grid_geneva.py  test_grid_mist.py  test_grid_parsec.py  test_grid_starevol.py  test_grid_yapsi.py  test_interp.py  test_librarian.py  test_likelihood.py  test_numba_interp.py  test_output.py  test_parsec_eep.py  test_photometry_fit.py  test_plotter.py  test_prior.py  test_sampler.py  test_sparse_roundtrip.py
