[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astroLACHESIS"
version = "0.0.5"
description = "Isochrone fitting with Bayesian Model Averaging"
requires-python = ">=3.11"
dependencies = [
    "lachesis-grids>=0.0.1",
    "numpy",
    "scipy",
    "h5py",
    "astropy",
    "astroquery",
    "regions",
    "pandas",
    "dynesty>=3.0.0",
    "numba",
    "arviz",
    "h5netcdf",
    "termcolor",
    "dustmaps>=1.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["lachesis"]

[tool.hatch.build.targets.sdist]
exclude = [
    "lachesis-grids",
    ".claude",
    "examples",
    "tests",
    "scripts",
    "docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
