[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astroLACHESIS"
version = "1.0.3"
description = "Isochrone fitting with Bayesian Model Averaging"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "José Vines", email = "jose.vines.l@gmail.com" },
    { name = "Austin Ware" },
]
keywords = [
    "astronomy",
    "stellar-parameters",
    "isochrones",
    "bayesian-model-averaging",
    "stellar-ages",
    "nested-sampling",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "lachesis-grids>=0.0.3",
    "numpy",
    "scipy",
    "h5py",
    "astropy",
    "astroquery",
    "regions",
    "pandas",
    "dynesty>=3.0.0",
    "numba",
    "arviz",
    "matplotlib",
    "h5netcdf",
    "termcolor",
    "dustmaps>=1.0.14",
    "pyphot>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/jvines/LACHESIS"
Repository = "https://github.com/jvines/LACHESIS"
Issues = "https://github.com/jvines/LACHESIS/issues"

[tool.hatch.build.targets.wheel]
packages = ["lachesis"]

[tool.hatch.build.targets.sdist]
exclude = [
    "lachesis-grids",
    ".claude",
    "examples",
    "tests",
    "scripts",
    "docs",
    "data",
    "paper_analysis",
    "paper_analysis_*",
    "sources",
    "*.log",
    "dist",
    "build",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
