[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lachesis"
version = "0.1.0"
description = "Isochrone fitting with Bayesian Model Averaging"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lachesis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
