[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lachesis"
version = "0.1.0"
description = "Isochrone fitting with Bayesian Model Averaging"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "requests",
    "astropy",
    "astroquery",
    "regions",
    "pandas>=3.0.1",
    "dynesty>=3.0.0",
    "numba>=0.64.0",
    "arviz>=0.23.4",
    "h5netcdf>=1.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lachesis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
